Spring Cloud Config Server and Spring Cloud Bus

--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -13,6 +13,9 @@ login:
     path: /users/login
 
 spring:
+  cloud:
+    config:
+      uri: http://localhost:8013
   application:
     name: users-ws
   devtools:
@@ -47,6 +50,11 @@ eureka:
     serviceUrl:
       defaultZone: http://localhost:8010/eureka
 
+management:
+  endpoints:
+    web:
+      exposure:
+        include: "*"
     
   
 #MySQL DEFAULT PWD: root - insert_password
