--- a/apigateway/src/main/resources/application.yml
+++ b/apigateway/src/main/resources/application.yml
@@ -42,6 +42,17 @@ spring:
             - RemoveRequestHeader=Cookie
             - AuthorizationHeaderFilter
             - RewritePath=/users-ws/(?<segment>.*), /$\{segment}
+        - id: get-user-albums
+          uri: lb://albums-ws
+          predicates:
+            - Path=/albums-ws/users/{id}/albums
+            - Method=GET
+            - Header=Authorization, Bearer (.*)
+          filters:
+            - RemoveRequestHeader=Cookie
+            - RewritePath=/users-ws/(?<segment>.*), /$\{segment}
+            - AuthorizationHeaderFilter
+            
 eureka:
   client:
     service-url:
@@ -49,3 +60,12 @@ eureka:
 
 token:
   secret: hfgry463hf746hf573ydh475fhy5739
+
+management:
+  endpoint:
+    gateway:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: gateway
