--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -55,6 +55,7 @@ management:
     web:
       exposure:
         include: "*"
-    
+albums:
+  url: http://albums-ws/users/%s/albums
   
 #MySQL DEFAULT PWD: root - insert_password
