--- a/albumservice/src/main/resources/application.yml
+++ b/albumservice/src/main/resources/application.yml
@@ -7,6 +7,13 @@ spring:
   devtools:
     restart:
       enabled: true
+  zipkin:
+    baseUrl: http://localhost:9411
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 
 eureka:
   client:
@@ -16,4 +23,5 @@ eureka:
     instance-id: ${spring.application.name}:${spring.application.instance_id:${random.value}}
 
 logging:
+  file:
     name: albums-ws.log
