--- a/userservice/src/main/resources/application.yml
+++ b/userservice/src/main/resources/application.yml
@@ -44,6 +44,13 @@ spring:
       file-size-threshold: 5KB
       max-file-size: 5MB
       max-request-size: 6MB
+  zipkin:
+    baseUrl: http://localhost:9411
+    sender:
+      type: web
+  sleuth:
+    sampler:
+      probability: 1
 
 eureka:
   client:
@@ -55,7 +62,31 @@ management:
     web:
       exposure:
         include: "*"
+  endpoint:
+    health:
+      enabled: true
+      show-details: always
+  health:
+    circuitbreakers:
+      enabled: true
+              
 albums:
   url: http://albums-ws/users/%s/albums
   
-#MySQL DEFAULT PWD: root - insert_password
+resilience4j:
+  circuitbreaker:
+    instances:
+      albums-ws:
+        registerHealthIndicator: true
+        slidingWindowSize: 2
+        permittedNumberOfCallsInHalfOpenState: 3
+        slidingWindowType: COUNT_BASED
+        minimumNumberOfCalls: 5
+        waitDurationInOpenState: 10s
+        failureRateThreshold: 50
+        eventConsumerBufferSize: 10
+
+logging:
+  file:
+    name: users-ws.log  
+        #MySQL DEFAULT PWD: root - insert_password
