--- a/configserver/src/main/resources/bootstrap.properties
+++ b/configserver/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 #encrypt.key=kj9809asjAJ249k2lj34l2j34l23j40swerwerw04022342
-encrypt.key-store.location=file:///${KEYSTORE_FILE_LOC}/apiEncryptionkey.jks
+#encrypt.key-store.location=file:///${KEYSTORE_FILE_LOC}/apiEncryptionkey.jks
+encrypt.key-store.location=file:/apiEncryptionkey.jks
 encrypt.key-store.password=1q2w3e4r
 encrypt.key-store.alias=apiEncryptionkey
